2011-09-06	The InnoDB Team

	* buf/buf0buddy.c:
	Fix Bug#12950803 62294: BUF_BUDDY_RELOCATE CALLS GETTIMEOFDAY
	WHILE HOLDING BUFFER POOL MUTEX

2011-09-06	The InnoDB Team

	* include/trx0undo.h, trx/trx0rec.c, trx/trx0undo.c:
	Fix Bug#12547647 UPDATE LOGGING COULD EXCEED LOG PAGE SIZE

2011-08-29	The InnoDB Team

	* btr/btr0btr.c, btr/btr0cur.c, fsp/fsp0fsp.c,
	include/btr0btr.h, include/btr0cur.h, include/fsp0fsp.h,
	include/mtr0mtr.h, include/mtr0mtr.ic, mtr/mtr0mtr.c,
	row/row0ins.c, row/row0row.c, row/row0upd.c, trx/trx0undo.c:
	Fix Bug#12704861 Corruption after a crash during BLOB update
	and other regressions from the fix of Bug#12612184

2011-08-15	The InnoDB Team

	* btr/btr0btr.c, btr/btr0cur.c, btr/btr0pcur.c, btr/btr0sea.c,
	dict/dict0crea.c, dict/dict0dict.c, ibuf/ibuf0ibuf.c,
	include/btr0btr.h, include/btr0btr.ic, include/sync0sync.h,
	sync/sync0sync.c:
	Fix Bug#11766591 59733: Possible deadlock when buffered changes
	are to be discarded in buf_page_create()

2011-08-08	The InnoDB Team

	* row/row0sel.c:
	Fix Bug#12835650 VARCHAR maximum length performance impact

2011-08-08	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#12770537 I_S.TABLES.DATA_LENGTH DOES NOT SHOW ON-DISK SIZE
	FOR COMPRESSED INNODB

2011-07-19	The InnoDB Team

	* buf/buf0buf.c, buf/buf0rea.c, handler/ha_innodb.cc,
	include/buf0buf.h, include/buf0buf.ic, include/srv0srv.h,
	srv/srv0srv.c:
	Fix Bug#12356373 by reintroducing random readahead

2011-06-30	The InnoDB Team

	* row/row0row.c:
	Fix Bug#12637786 Wrong secondary index entries on CHAR and VARCHAR
	columns in ROW_FORMAT=DYNAMIC and ROW_FORMAT=COMPRESSED

2011-06-16	The InnoDB Team

	* btr/btr0cur.c, buf/buf0buddy.c, buf/buf0buf.c, buf/buf0lru.c,
	include/buf0buddy.h, include/buf0buddy.ic, include/buf0buf.h,
	include/buf0buf.ic, include/buf0lru.h, include/buf0types.h:
	Fix Bug#61188 DROP TABLE extremely slow

2011-06-16	The InnoDB Team

	* buf/buf0buddy.c, buf/buf0buf.c, buf/buf0flu.c, buf/buf0lru.c,