@@ -1,3 +1,8 @@
+2011-09-08	The InnoDB Team
+
+	* btr/btr0cur.c, include/page0page.h, include/row0upd.ic:
+	Fix Bug#12948130 UNNECESSARY X-LOCKING OF ADAPTIVE HASH INDEX
+
 2011-09-06	The InnoDB Team
 
 	* buf/buf0buddy.c:
